--- a/index.html
+++ b/index.html
@@ -126,42 +126,42 @@
           </a>
         </div>
         <div class="" style="margin-left: 3vw">
-          <img src="/images/SECTION 1/Header sections.png" alt="" />
-          <!-- <ul
-            class="flex flex-row gap-10 text-xs lg:text-sm"
+          <!-- <img src="/images/SECTION 1/Header sections.png" alt="" /> -->
+          <ul
+            class="flex flex-row gap-4 text-xs lg:text-sm"
             style="color: #003638; font-weight: bold"
           >
             <li>
-              <a href="#" class="hover:text-orange-500 transition-colors"
+              <a href="#" class="hover:text-orange-500 transition-colors header-li"
                 >K-12</a
               >
             </li>
             <li>
-              <a href="#" class="hover:text-orange-500 transition-colors"
+              <a href="#" class="hover:text-orange-500 transition-colors header-li"
                 >Higher Education</a
               >
             </li>
             <li>
-              <a href="#" class="hover:text-orange-500 transition-colors"
+              <a href="#" class="hover:text-orange-500 transition-colors header-li"
                 >Trunkey Projects</a
               >
             </li>
             <li>
-              <a href="#" class="hover:text-orange-500 transition-colors"
+              <a href="#" class="hover:text-orange-500 transition-colors header-li"
                 >About</a
               >
             </li>
             <li>
-              <a href="#" class="hover:text-orange-500 transition-colors"
+              <a href="#" class="hover:text-orange-500 transition-colors header-li"
                 >Our Group</a
               >
             </li>
             <li>
-              <a href="#" class="hover:text-orange-500 transition-colors"
+              <a href="#" class="hover:text-orange-500 transition-colors header-li"
                 >Resources</a
               >
             </li>
-          </ul> -->
+          </ul>
         </div>
         <div style="margin-left: 10vw; margin-right: 9vw">
           <!-- <button
@@ -393,7 +393,7 @@
         <img
           src="/images/SECTION 1/Small Circle shape 2 .png"
           class="relative circle-shape-2"
-          style="height: 15vh; left: 6vw; top: 0vh; z-index: 12"
+          style="height: 15vh; left: 6vw; top: -4vh; z-index: 12"
           alt=""
         />
 
@@ -467,7 +467,7 @@
     </div>
 
     <div
-      class="flex flex-col items-center justify-center text-center mt-20 p-20 empowering-main"
+      class="flex flex-col items-center justify-center text-center p-20 empowering-main"
       style="
         border: 1px solid #f0f4f4;
         border-radius: 20px;
@@ -560,20 +560,19 @@
           "
         >
           <div
-            class="p-3"
+            class="p-3 k-12-card-outer-div"
             style="
-              background-color: #2a81a3;
+              background-color: rgb(0, 121, 145);
               border-radius: 10px;
               height: fit-content;
-              min-height: 38vh;
             "
           >
             <div
-              class="p-4"
+              class="p-4 k-12 k-12-card-inner-div"
               style="
                 border: 1px dashed white;
                 border-radius: 10px;
-                min-height: 34vh;
+                min-height: 240px;
               "
             >
               <img
@@ -581,30 +580,28 @@
                 style="width: 4vw"
                 alt=""
               />
-              <h1 style="font-weight: 700; margin-top: 15px">
+              <h1 style="font-weight: 700; margin-top: 15px ;font-size: 1.1rem">
                 Coding & Robotics
               </h1>
-              <p style="font-size: x-small; margin-top: 15px">
+              <p style="font-size: x-small; margin-top: 15px ;font-size: 0.8rem;">
                 Introducing students to programming and robotics to enhance
                 computational thinking and problem-solving skills.
               </p>
             </div>
           </div>
           <div
-            class="p-3"
+            class="p-3 k-12-card-outer-div"
             style="
-              background-color: #dc8849;
+              background-color: #D1672D;
               border-radius: 10px;
               height: fit-content;
-              min-height: 38vh;
             "
           >
             <div
-              class="p-4"
+              class="p-4 k-12-card-inner-div"
               style="
                 border: 1px dashed white;
                 border-radius: 10px;
-                min-height: 34vh;
               "
             >
               <img
@@ -612,28 +609,26 @@
                 style="width: 4vw"
                 alt=""
               />
-              <h1 style="font-weight: 700; margin-top: 15px">Science</h1>
-              <p style="font-size: x-small; margin-top: 15px">
+              <h1 style="font-weight: 700; margin-top: 15px; font-size: 1.1rem">Science</h1>
+              <p style="font-size: x-small; margin-top: 15px; font-size: 0.8rem">
                 Offering resources in areas like physics, chemistry, and biology
                 to deepen scientific understanding.
               </p>
             </div>
           </div>
           <div
-            class="p-3"
+            class="p-3 k-12-card-outer-div"
             style="
-              background-color: #4da438;
+              background-color: #228B22;
               border-radius: 10px;
               height: fit-content;
-              min-height: 38vh;
             "
           >
             <div
-              class="p-4"
+              class="p-4 k-12-card-inner-div"
               style="
                 border: 1px dashed white;
                 border-radius: 10px;
-                min-height: 34vh;
               "
             >
               <img
@@ -641,30 +636,28 @@
                 style="width: 4vw"
                 alt=""
               />
-              <h1 style="font-weight: 700; margin-top: 15px">
+              <h1 style="font-weight: 700; margin-top: 15px ; font-size: 1.1rem">
                 Immersive Learning
               </h1>
-              <p style="font-size: x-small; margin-top: 15px">
+              <p style="font-size: x-small; margin-top: 15px ; font-size: 0.8rem">
                 Utilizing tools such as ClassVR to create engaging learning
                 experiences through virtual reality.
               </p>
             </div>
           </div>
           <div
-            class="p-3"
+            class="p-3 k-12-card-outer-div"
             style="
-              background-color: #e2a635;
+              background-color: #D18200;
               border-radius: 10px;
               height: fit-content;
-              min-height: 38vh;
             "
           >
             <div
-              class="p-4"
+              class="p-4 k-12-card-inner-div"
               style="
                 border: 1px dashed white;
                 border-radius: 10px;
-                min-height: 34vh;
               "
             >
               <img
@@ -672,30 +665,28 @@
                 style="width: 4vw"
                 alt=""
               />
-              <h1 style="font-weight: 700; margin-top: 15px">
+              <h1 style="font-weight: 700; margin-top: 15px ; font-size: 1.1rem">
                 Hybrid Learning
               </h1>
-              <p style="font-size: x-small; margin-top: 15px">
+              <p style="font-size: x-small; margin-top: 15px ; font-size: 0.8rem">
                 Combining traditional classroom methods with digital tools to
                 provide flexible learning options for students.
               </p>
             </div>
           </div>
           <div
-            class="p-3"
+            class="p-3 k-12-card-outer-div"
             style="
-              background-color: #9f4e51;
+              background-color: #8B2424;
               border-radius: 10px;
               height: fit-content;
-              min-height: 38vh;
             "
           >
             <div
-              class="p-4"
+              class="p-4 k-12-card-inner-div"
               style="
                 border: 1px dashed white;
                 border-radius: 10px;
-                min-height: 34vh;
               "
             >
               <img
@@ -703,30 +694,28 @@
                 style="width: 3vw"
                 alt=""
               />
-              <h1 style="font-weight: 700; margin-top: 15px">
+              <h1 style="font-weight: 700; margin-top: 15px ; font-size: 1.1rem">
                 Design Thinking
               </h1>
-              <p style="font-size: x-small; margin-top: 15px">
+              <p style="font-size: x-small; margin-top: 15px ; font-size: 0.8rem">
                 Encouraging creativity and innovation through hands-on projects
                 and 3D printing technologies.
               </p>
             </div>
           </div>
           <div
-            class="p-3"
+            class="p-3 k-12-card-outer-div"
             style="
-              background-color: #3599bf;
+              background-color: #0085A9;
               border-radius: 10px;
               height: fit-content;
-              min-height: 38vh;
             "
           >
             <div
-              class="p-4"
+              class="p-4 k-12-card-inner-div"
               style="
                 border: 1px dashed white;
                 border-radius: 10px;
-                min-height: 34vh;
               "
             >
               <img
@@ -734,8 +723,8 @@
                 style="width: 3vw"
                 alt=""
               />
-              <h1 style="font-weight: 700; margin-top: 15px">AI & Drones</h1>
-              <p style="font-size: x-small; margin-top: 15px">
+              <h1 style="font-weight: 700; margin-top: 15px; font-size: 1.1rem">AI & Drones</h1>
+              <p style="font-size: x-small; margin-top: 15px; font-size: 0.8rem">
                 Introducing artificial intelligence concepts and drone
                 technology to prepare students for future technological
                 advancements.
@@ -758,7 +747,7 @@
     <!-- Section 2 -->
     <div id="section2" class="context">
       <div
-        class="flex flex-row justify-between"
+        class="flex flex-row justify-between pt-10"
         style="
           height: 70vh;
           background-image: url('images/HED Tab Open File/Higher Education-assets/Higher education tab holder.png');
@@ -804,7 +793,7 @@
           />
           <img
             src="/images/HED Tab Open File/Higher Education-assets/Higher education vector.png"
-            style="height: 30vh"
+            style="height: 200px; margin-top:30px"
             alt="Student Illustration"
           />
         </div>
