--- a/index.html
+++ b/index.html
@@ -1756,9 +1756,10 @@
 
 function isElementInViewport(el) {
   const rect = el.getBoundingClientRect();
+  console.log(rect.top, rect.bottom, window.innerHeight);
   return (
     rect.top < window.innerHeight &&
-    rect.bottom > 0
+    rect.bottom > 0 || rect.bottom > window.innerHeight && rect.top < 0
   );
 }
 
