--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <body>
   <nav class="relative">
-    <div class="hidden lg:flex px-14 py-7 flex-row items-center">
+    <div class="hidden lg:flex px-10 py-4 gap-2 flex-row items-center">
       <div>
         <a href="">
           <img src="/images/SECTION 1/Atlab logo.png" class="logo-img translate-scale" alt="Atlab Logo" />
