--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </div>
       <div class="" style="margin-left: 3vw">
         <!-- <img src="/images/SECTION 1/Header sections.png" alt="" /> -->
-        <ul class="flex flex-row gap-4 text-xs lg:text-sm" style="color: #003638; font-weight: bold">
+        <ul class="flex flex-row text-xs lg:text-sm" style="color: #003638; gap:1vw;font-weight: bold">
           <li>
             <a href="#" class="transition-colors header-li translate-scale">K-12</a>
           </li>
