--- a/index.html
+++ b/index.html
@@ -563,6 +563,20 @@
         <img src="/images/SECTION 2/K12 Main image.png" style="width: 30vw" alt="" class="k-12-image-1" />
       </div>
     </div>
+    
+    <div class="partners-container">
+      <div class="partners-section justify-center">
+        <h2 class="partners-header">Our Partners</h2>
+        <div class="partners-logos-wrapper">
+          <img src="images/new/hafele.png" alt="Our Partners Logos" class="partners-logos-image" />
+  
+          <img src="images/new/leo-digital.png" alt="Our Partners Logos" class="partners-logos-image" />
+  
+          <img src="images/new/hafele.png" alt="Our Partners Logos" class="partners-logos-image" />
+          <img src="images/new/leo-digital.png" alt="Our Partners Logos" class="partners-logos-image" />
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- Section 2 -->
@@ -773,21 +787,23 @@
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="partners-container">
-    <div class="partners-section">
-      <h2 class="partners-header">Our Partners</h2>
-      <div class="partners-logos-wrapper">
-        <img src="images/new/hafele.png" alt="Our Partners Logos" class="partners-logos-image" />
-
-        <img src="images/new/hafele.png" alt="Our Partners Logos" class="partners-logos-image" />
-
-        <img src="images/new/hafele.png" alt="Our Partners Logos" class="partners-logos-image" />
-        <img src="images/new/hafele.png" alt="Our Partners Logos" class="partners-logos-image" />
+    <div class="partners-container">
+      <div class="partners-section justify-center">
+        <h2 class="partners-header">Our Partners</h2>
+        <div class="partners-logos-wrapper">
+          <img src="images/new/leo-digital.png" alt="Our Partners Logos" class="partners-logos-image" />
+  
+          <img src="images/new/hafele.png" alt="Our Partners Logos" class="partners-logos-image" />
+  
+          <img src="images/new/leo-digital.png" alt="Our Partners Logos" class="partners-logos-image" />
+          <img src="images/new/hafele.png" alt="Our Partners Logos" class="partners-logos-image" />
+        </div>
       </div>
     </div>
   </div>
+
+  
 
   <div class="atlab-trust">
     <img src="/images/atlab.png" alt="" />
