--- a/index.html
+++ b/index.html
@@ -290,6 +290,8 @@
                 Spark curiosity, boost engagement, and transform classroom
                 learning.
               </div>
+          <button class="learn-more-btn translate-scale">Learn More <span class="ml-10">→</span></button>
+
             </div>
 
             <!-- Slide 2 Content -->
@@ -299,6 +301,8 @@
                 Hands-on coding, robotics, science, and AI kits that ignite creativity, boost confidence, and inspire
                 young innovators to explore STEAM.
               </div>
+          <button class="learn-more-btn translate-scale">Learn More <span class="ml-10">→</span></button>
+
             </div>
 
             <!-- Slide 3 Content -->
@@ -308,12 +312,13 @@
                 Equip your institution with industry-grade labs, AI-driven simulations, and turnkey research spaces that
                 transform academic concepts into real-world expertise and career-ready skills.
               </div>
+          <button class="learn-more-btn translate-scale">Learn More <span class="ml-10">→</span></button>
+
             </div>
           </div>
         </div>
 
-        <div class="controls" style="padding-left: 20px">
-          <button class="learn-more-btn translate-scale">Learn More <span class="ml-10">→</span></button>
+        <div class="controls" style="padding-right: 20px">
           <div class="dots-container">
             <div class="dot"></div>
             <div class="dot"></div>
