--- a/index.html
+++ b/index.html
@@ -266,10 +266,15 @@
   <div>
     <div class="image-slider-wrapper">
       <div class="image-slider-track">
+        <img src="/images/new/Banner 3 - Higher Education.jpg" class="slider-image" />
+
         <img src="/images/SECTION 2/Main Header image.png.jpg" class="slider-image" />
         <img src="/images/new/Banner 2 - K-12.jpg" class="slider-image" />
 
         <img src="/images/new/Banner 3 - Higher Education.jpg" class="slider-image" />
+
+        <img src="/images/SECTION 2/Main Header image.png.jpg" class="slider-image" />
+
 
       </div>
     </div>
@@ -280,6 +285,17 @@
       <div class="content-card">
         <div class="content-slider">
           <div class="slides-wrapper">
+
+            <div class="slide-content">
+              <div class="title">Higher Education: Advanced Real-World Expertise</div>
+              <div class="description">
+                Equip your institution with industry-grade labs, AI-driven simulations, and turnkey research spaces that
+                transform academic concepts into real-world expertise and career-ready skills.
+              </div>
+          <button class="learn-more-btn translate-scale">Learn More <span class="ml-10">→</span></button>
+
+            </div>
+
             <!-- Slide 1 Content -->
             <div class="slide-content">
               <div class="title">
@@ -315,6 +331,20 @@
           <button class="learn-more-btn translate-scale">Learn More <span class="ml-10">→</span></button>
 
             </div>
+
+             <div class="slide-content">
+              <div class="title">
+                Inspiring Innovation, Empowering Education
+              </div>
+              <div class="description">
+                Empowering educators and institutions with hands on Ed-Tech to
+                Spark curiosity, boost engagement, and transform classroom
+                learning.
+              </div>
+          <button class="learn-more-btn translate-scale">Learn More <span class="ml-10">→</span></button>
+
+            </div>
+
           </div>
         </div>
 
@@ -1670,51 +1700,85 @@
       // Highlight selected tab
       clickedTab.classList.add("active");
     }
+let currentSlide = 1; // Start from actual slide 1
+const slidesWrapper = document.querySelector(".slides-wrapper");
+const imageSliderTrack = document.querySelector(".image-slider-track");
+const dots = document.querySelectorAll(".dot");
+const totalSlides = 3; // excluding clones
+let autoSlideInterval = null;
 
-    let currentSlide = 0;
-    const totalSlides = 3;
-    const slidesWrapper = document.querySelector(".slides-wrapper");
-    const imageSliderTrack = document.querySelector(".image-slider-track");
-    const dots = document.querySelectorAll(".dot");
 
-    function updateActiveDot(index) {
-      dots.forEach(dot => dot.classList.remove("active"));
-      dots[index].classList.add("active");
-    }
+function updateActiveDot(index) {
+  dots.forEach(dot => dot.classList.remove("active"));
+  dots[index].classList.add("active");
+}
 
-    function goToSlide(index) {
-      currentSlide = index;
-      const translateValue = -33.333 * index;
+function goToSlide(index, animated = true) {
+  if (animated === false) {
+    slidesWrapper.style.transition = "none";
+    imageSliderTrack.style.transition = "none";
+  } else {
+    slidesWrapper.style.transition = "transform 0.7s ease-in-out";
+    imageSliderTrack.style.transition = "transform 0.7s ease-in-out";
+  }
 
-      // Text content slide
-      slidesWrapper.style.transform = `translateX(${translateValue}%)`;
+  const translatePercent = -20 * index; // 5 slides => 100 / 5 = 20%
+  const translatePercent2 = -100 * index; // 5 slides => 100 / 5 = 20%
 
-      // Image slide
-      imageSliderTrack.style.transform = `translateX(-${100 * index}vw)`;
+  slidesWrapper.style.transform = `translateX(${translatePercent}%)`;
+  imageSliderTrack.style.transform = `translateX(${translatePercent2}vw)`;
+}
 
-      updateActiveDot(index);
+function nextSlide() {
+  currentSlide++;
+  goToSlide(currentSlide);
+  if (currentSlide > totalSlides) {
+    setTimeout(() => {
+      currentSlide = 1;
+      goToSlide(currentSlide, false);
+    }, 700);
+  }
+  updateActiveDot((currentSlide - 1) % totalSlides);
+}
 
-      
-    }
+function previousSlide() {
+  currentSlide--;
+  goToSlide(currentSlide);
+  if (currentSlide === 0) {
+    setTimeout(() => {
+      currentSlide = totalSlides;
+      goToSlide(currentSlide, false);
+    }, 700);
+  }
+  updateActiveDot((currentSlide - 1 + totalSlides) % totalSlides);
+}
 
-    // Dot click support
-    dots.forEach((dot, index) => {
-      dot.addEventListener("click", () => {
-        goToSlide(index);
-      });
-    });
+dots.forEach((dot, index) => {
+  dot.addEventListener("click", () => {
+    currentSlide = index + 1;
+    goToSlide(currentSlide);
+    updateActiveDot(index);
+    
+    // Optional: Restart auto sliding from this point
+    clearInterval(autoSlideInterval);
+    autoSlideInterval = setInterval(nextSlide, 4000);
+  });
+});
 
-    // Auto slide
-    function autoUpdateSlides() {
-      setInterval(() => {
-        currentSlide = (currentSlide + 1) % totalSlides;
-        goToSlide(currentSlide);
-      }, 4000); // 4s per slide
-    }
+function autoUpdateSlides() {
+  autoSlideInterval = setInterval(nextSlide, 4000);
+}
 
-    updateActiveDot(0);
-    goToSlide(0);
-    autoUpdateSlides();
+
+
+function autoUpdateSlides() {
+  setInterval(nextSlide, 4000);
+}
+
+goToSlide(currentSlide, false);
+updateActiveDot(0);
+autoUpdateSlides();
+
 
 
     let currentSlide_a = 0;
